<resources>
    <string name="app_name">WeatherApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="accept">Accept</string>
    <string name="todo">TODO</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <!-- Login -->
    <string name="login_title">Welcome</string>
    <string name="login_subtitle">Login to your account</string>
    <string name="login_username">Email address</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_button_otp">Confirm</string>
    <string name="login_invalid_username">Not a valid username.</string>
    <string name="login_invalid_password">Password must be >5 characters.</string>

    <!-- Permissions -->
    <string name="title_permisos">Necesita permisos múltiples</string>
    <string name="mensaje_permisos">Esta aplicación necesita permisos para su correcto funcionamiento.</string>
    <string name="mensaje_nopermiso">No se puede obtener permiso</string>
    <string name="mensaje_ir_permisos">Ir a Permisos para conceder permisos</string>
    <string name="action_conceder">Conceder</string>
    <string name="action_cancelar">Cancelar</string>

</resources>