<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.auth.LoginActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="account" type="com.example.basicexample.data.dto.AccountDto"/>
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo_image"
                android:layout_width="match_parent"
                android:layout_marginTop="120dp"
                android:layout_height="80dp"
                app:srcCompat="@mipmap/logo"
                app:layout_constraintTop_toTopOf="parent"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="50dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/logo_image">

                    <TextView
                        android:id="@+id/tvLoginTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_title"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        app:autoSizeTextType="uniform"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvLoginSubtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_subtitle"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvLoginTitle" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tvInputLayoutUsername"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="16dp"
                        app:boxBackgroundColor="@color/white"
                        app:counterEnabled="false"
                        app:helperTextEnabled="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvLoginSubtitle"
                        app:startIconDrawable="@drawable/ic_baseline_account_circle_24"
                        app:startIconTint="@color/colorPrimary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/login_input_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/login_username"
                            android:inputType="textEmailAddress"
                            android:singleLine="true"
                            android:text="@{account.username}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tvInputLayoutPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        app:boxBackgroundColor="@color/white"
                        app:boxBackgroundMode="filled"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvInputLayoutUsername"
                        app:passwordToggleEnabled="true"
                        app:startIconDrawable="@drawable/ic_baseline_verified_user_24"
                        app:startIconTint="@color/colorPrimary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/login_input_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/login_password"
                            android:inputType="textPassword|textWebPassword"
                            android:singleLine="true"
                            android:text="@{account.password}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btnLogin"
                        style="?android:textAppearanceSmall"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="50dp"
                        android:layout_marginVertical="50dp"
                        android:background="@drawable/borde_redondo"
                        android:text="@string/login_button"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvInputLayoutPassword"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>